risc0/zirgen/dsl/test/repro/unknown_decl_back_expr.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error: unknown component `Bogus`

component Top() {
  x := Bogus;
  y := Reg(x@1);
}

